Changed 'width' from '100vh' to '100%' to prevent x-scrollbar from showing

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -18,14 +18,14 @@
 #main-content{
     display: flex;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: white;
 }
 
 #footer{
     background-color: var(--space-black);
     height: 150px;
-    width: 100vw;
+    width: 100%;
     display: flex;
 }
 
